# micro-service-template

./: .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
adapters/: repository.py
tests/: conftest.py
{{cookiecutter.dir_name}}/: .flake8  Makefile  docker-compose.yml  main.py  pyproject.toml
{{cookiecutter.dir_name}}/core/: settings.py
{{cookiecutter.dir_name}}/core/log/: formatters.py  logger.py
{{cookiecutter.dir_name}}/entrypoints/api/endpoints/: my_endpoint.py
{{cookiecutter.dir_name}}/tests/api/: response_200_test.py
